--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-server.port=8081
-spring.rabbitmq.broker-url=tcp://127.0.0.1:5672
+server.port=333
+#spring.rabbitmq.broker-url=tcp://127.0.0.1:5672
+spring.rabbitmq.host=127.0.0.1
+spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-spring.cloud.stream.bindings.task-channel-in.destination=tasks
-spring.cloud.stream.bindings.task-channel-out.destination=tasks
+spring.cloud.stream.bindings.task-channel-in.destination=imperative-programming-tasks
+spring.cloud.stream.bindings.task-channel-out.destination=imperative-programming-tasks
 
 logging.level.org.springframework.cloud.stream=debug
